methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:16: error: not found: type color
def makeV(c:color){
            ^