methods.picture.MethodsPicture.scala.code
override def run() {
  for (i <- 1 to 3){
    makeCube();
    forward(5);
    makeCube();
    forward(5);
    makeCube();
    backward(10);
    left();
    forward(5);
    right();
    
  }
}

def makeV(c:color){
    left()
    forward()
    setBrushColor(c)
    backward()
    right()
    forward()
    setBrushColor(c)
    right()
    forward()
    setBrushColor(c)
    backward()
    left()
}

def makeCube(){
    forward()
    forward()
		left()
    makeV(Color.yellow)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(Color.red)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(Color.blue)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(Color.green)
		right()
		forward()
		forward()
		left()
}